@@ -30,3 +30,4 @@
 2016-09-23 - V 0.2.2 : Cache management improvements, add media cache
 2016-10-07 - V 0.2.3 : Fix media command
 2016-10-10 - V 0.3.0 : New functionnaly : install prestashop from command line
+2016-11-03 - V 0.4.0 : New command to get all configurations
